; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_route_string.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_route_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.route_ipv4 = type { i32, i32, i32, i32, i32 }
%struct.gc_arena = type { i32 }
%struct.buffer = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"ROUTE network %s netmask %s gateway %s\00", align 1
@RT_METRIC_DEFINED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c" metric %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.route_ipv4*, %struct.gc_arena*)* @route_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @route_string(%struct.route_ipv4* %0, %struct.gc_arena* %1) #0 {
  %3 = alloca %struct.route_ipv4*, align 8
  %4 = alloca %struct.gc_arena*, align 8
  %5 = alloca %struct.buffer, align 4
  store %struct.route_ipv4* %0, %struct.route_ipv4** %3, align 8
  store %struct.gc_arena* %1, %struct.gc_arena** %4, align 8
  %6 = load %struct.gc_arena*, %struct.gc_arena** %4, align 8
  %7 = call i32 @alloc_buf_gc(i32 256, %struct.gc_arena* %6)
  %8 = getelementptr inbounds %struct.buffer, %struct.buffer* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %10 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.gc_arena*, %struct.gc_arena** %4, align 8
  %13 = call i32 @print_in_addr_t(i32 %11, i32 0, %struct.gc_arena* %12)
  %14 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %15 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %14, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.gc_arena*, %struct.gc_arena** %4, align 8
  %18 = call i32 @print_in_addr_t(i32 %16, i32 0, %struct.gc_arena* %17)
  %19 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %20 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.gc_arena*, %struct.gc_arena** %4, align 8
  %23 = call i32 @print_in_addr_t(i32 %21, i32 0, %struct.gc_arena* %22)
  %24 = call i32 (%struct.buffer*, i8*, i32, ...) @buf_printf(%struct.buffer* %5, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %18, i32 %23)
  %25 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %26 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @RT_METRIC_DEFINED, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %2
  %32 = load %struct.route_ipv4*, %struct.route_ipv4** %3, align 8
  %33 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 (%struct.buffer*, i8*, i32, ...) @buf_printf(%struct.buffer* %5, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %34)
  br label %36

36:                                               ; preds = %31, %2
  %37 = call i8* @BSTR(%struct.buffer* %5)
  ret i8* %37
}

declare dso_local i32 @alloc_buf_gc(i32, %struct.gc_arena*) #1

declare dso_local i32 @buf_printf(%struct.buffer*, i8*, i32, ...) #1

declare dso_local i32 @print_in_addr_t(i32, i32, %struct.gc_arena*) #1

declare dso_local i8* @BSTR(%struct.buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
